sfdc_enterprise_42demo - SANDBOX/src/objects/Twinfield_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Defines settings for the TwinfieldConnector</description>
    <fields>
        <fullName>Booking_Type__c</fullName>
        <defaultValue>&quot;temporary&quot;</defaultValue>
        <inlineHelpText>Type of bookings made in Twinfield:
final or temporary</inlineHelpText>
        <label>Booking Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_Iso_Code__c</fullName>
        <defaultValue>&quot;EUR&quot;</defaultValue>
        <inlineHelpText>Currency for bookings</inlineHelpText>
        <label>Currency Iso Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Untill_Due_Date__c</fullName>
        <defaultValue>14</defaultValue>
        <inlineHelpText>How many days after the invoice date should payment be made?</inlineHelpText>
        <label>Days Untill Due Date</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Daybook__c</fullName>
        <defaultValue>&quot;VRK&quot;</defaultValue>
        <inlineHelpText>In case no daybook is defined, what code should be used?</inlineHelpText>
        <label>Default Daybook</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Ledger_Code__c</fullName>
        <defaultValue>&quot;8015&quot;</defaultValue>
        <inlineHelpText>In case no ledger is defined, what should be used?</inlineHelpText>
        <label>Default Ledger Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ledgercode_Invoiced_In_Advance__c</fullName>
        <defaultValue>&quot;1980&quot;</defaultValue>
        <label>Ledgercode Invoiced In Advance</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logon_Endpoint__c</fullName>
        <defaultValue>&quot;https://login.twinfield.com/webservices/session.asmx?wsdl&quot;</defaultValue>
        <description>Endpoint for the Twinfield Logon call.</description>
        <inlineHelpText>Endpoint for the Twinfield Logon call.</inlineHelpText>
        <label>Logon Endpoint</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nominal_Code__c</fullName>
        <defaultValue>&quot;1200&quot;</defaultValue>
        <inlineHelpText>Nominal code for total lines</inlineHelpText>
        <label>Nominal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <description>Organisation to login to Twinfield</description>
        <inlineHelpText>Organisation to login to Twinfield</inlineHelpText>
        <label>Organization</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <description>Password to login to Twinfield</description>
        <inlineHelpText>Password to login to Twinfield</inlineHelpText>
        <label>Password</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessXML_Suffix__c</fullName>
        <defaultValue>&quot;/webservices/processxml.asmx?wsdl&quot;</defaultValue>
        <label>ProcessXML Suffix</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOAP_Namespace__c</fullName>
        <defaultValue>&quot;http://schemas.xmlsoap.org/soap/envelope/&quot;</defaultValue>
        <label>SOAP Namespace</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timeout__c</fullName>
        <defaultValue>&quot;60000&quot;</defaultValue>
        <description>Timeout in milliseconds</description>
        <inlineHelpText>Timeout in milliseconds</inlineHelpText>
        <label>Timeout</label>
        <length>8</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twinfield_Namespace__c</fullName>
        <defaultValue>&quot;http://www.twinfield.com/&quot;</defaultValue>
        <label>Twinfield Namespace</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twinfield_Office__c</fullName>
        <defaultValue>&quot;12025&quot;</defaultValue>
        <inlineHelpText>Office code for your Twinfield instance to make bookings to.</inlineHelpText>
        <label>Twinfield Office</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>Username to login to Twinfield</description>
        <inlineHelpText>Username to login to Twinfield</inlineHelpText>
        <label>Username</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Twinfield Settings</label>
</CustomObject>